// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsible matches the snapshot by default 1`] = `
.c11 {
  width: 24px;
  height: 24px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c2 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c3:active {
  color: #000;
  background-color: #f7f7f7;
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c4::-moz-focus-inner {
  border-width: 0;
}

.c4:focus {
  outline: none;
  border-color: #0066cd;
  color: #000;
  background-color: #fff;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c5:hover {
  color: #000;
  background-color: #fff;
  border-color: var(--yoast-color-border--default);
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
  -webkit-transition: var(--yoast-transition-default);
  transition: var(--yoast-transition-default);
}

.c6 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-x: hidden;
  line-height: normal;
}

.c10 {
  display: block;
  line-height: 1.5;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #555;
}

.c0 {
  background-color: #fff;
}

.c7 {
  width: 100%;
  background-color: #fff;
  padding: 16px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border-color: transparent;
  border: none;
  border-radius: 0;
  box-shadow: none;
  font-weight: normal;
}

.c7:focus {
  outline: 1px solid #0066cd;
  outline-offset: -1px;
}

.c7:active {
  box-shadow: none;
  background-color: #fff;
}

.c7 svg:first-child {
  margin-right: 8px;
}

.c7 svg:last-child {
  margin-left: 8px;
}

.c1 {
  margin: 0 !important;
  padding: 0 !important;
  font-size: 1rem !important;
  font-weight: normal !important;
  color: #555 !important;
}

.c1 .c9 {
  font-weight: normal;
  color: #555;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .c6::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <h2
    className="c1"
  >
    <button
      aria-expanded={false}
      className="c2 c3 c4 c5 c6 c7"
      id={null}
      onClick={[Function]}
      type="button"
    >
      <span
        className="c8"
      >
        <span
          className="c9 c10"
        >
          Lorem ipsum dolor sit amet
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="c11 yoast-svg-icon yoast-svg-icon-chevron-down"
        fill="currentColor"
        focusable="false"
        role="img"
        size="24px"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M0,0h24v24H0V0z"
            fill="none"
          />
        </g>
        <g>
          <path
            d="M7.41,8.59L12,13.17l4.59-4.58L18,10l-6,6l-6-6L7.41,8.59z"
          />
        </g>
      </svg>
    </button>
  </h2>
</div>
`;

exports[`Collapsible matches the snapshot by default 2`] = `
.c11 {
  width: 24px;
  height: 24px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c2 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c3:active {
  color: #000;
  background-color: #f7f7f7;
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c4::-moz-focus-inner {
  border-width: 0;
}

.c4:focus {
  outline: none;
  border-color: #0066cd;
  color: #000;
  background-color: #fff;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c5:hover {
  color: #000;
  background-color: #fff;
  border-color: var(--yoast-color-border--default);
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
  -webkit-transition: var(--yoast-transition-default);
  transition: var(--yoast-transition-default);
}

.c6 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-x: hidden;
  line-height: normal;
}

.c10 {
  display: block;
  line-height: 1.5;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #555;
}

.c0 {
  background-color: #fff;
}

.c7 {
  width: 100%;
  background-color: #fff;
  padding: 16px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border-color: transparent;
  border: none;
  border-radius: 0;
  box-shadow: none;
  font-weight: normal;
}

.c7:focus {
  outline: 1px solid #0066cd;
  outline-offset: -1px;
}

.c7:active {
  box-shadow: none;
  background-color: #fff;
}

.c7 svg:first-child {
  margin-right: 8px;
}

.c7 svg:last-child {
  margin-left: 8px;
}

.c1 {
  margin: 0 !important;
  padding: 0 !important;
  font-size: 1rem !important;
  font-weight: normal !important;
  color: #555 !important;
}

.c1 .c9 {
  font-weight: normal;
  color: #555;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .c6::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <h2
    className="c1"
  >
    <button
      aria-expanded={true}
      className="c2 c3 c4 c5 c6 c7"
      id={null}
      onClick={[Function]}
      type="button"
    >
      <span
        className="c8"
      >
        <span
          className="c9 c10"
        >
          Lorem ipsum dolor sit amet
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="c11 yoast-svg-icon yoast-svg-icon-chevron-up"
        fill="currentColor"
        focusable="false"
        role="img"
        size="24px"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M0,0h24v24H0V0z"
            fill="none"
          />
        </g>
        <g>
          <path
            d="M12,8l-6,6l1.41,1.41L12,10.83l4.59,4.58L18,14L12,8z"
          />
        </g>
      </svg>
    </button>
  </h2>
  <h4>
    Vivamus rutrum velit ut nunc dignissim vulputate.
  </h4>
  <p>
    In a purus quis leo dictum ultrices. Aenean commodo erat at pellentesque placerat.
  </p>
  <h4>
    Ut id ex efficitur risus suscipit fermentum.
  </h4>
  <p>
    Proin sed dolor neque. Vestibulum id leo ut ante luctus interdum sed ut sem.
  </p>
</div>
`;

exports[`Collapsible matches the snapshot by default when the collapsible has an ID 1`] = `
.c11 {
  width: 24px;
  height: 24px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c2 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c3:active {
  color: #000;
  background-color: #f7f7f7;
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c4::-moz-focus-inner {
  border-width: 0;
}

.c4:focus {
  outline: none;
  border-color: #0066cd;
  color: #000;
  background-color: #fff;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c5:hover {
  color: #000;
  background-color: #fff;
  border-color: var(--yoast-color-border--default);
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
  -webkit-transition: var(--yoast-transition-default);
  transition: var(--yoast-transition-default);
}

.c6 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-x: hidden;
  line-height: normal;
}

.c10 {
  display: block;
  line-height: 1.5;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #555;
}

.c0 {
  background-color: #fff;
}

.c7 {
  width: 100%;
  background-color: #fff;
  padding: 16px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border-color: transparent;
  border: none;
  border-radius: 0;
  box-shadow: none;
  font-weight: normal;
}

.c7:focus {
  outline: 1px solid #0066cd;
  outline-offset: -1px;
}

.c7:active {
  box-shadow: none;
  background-color: #fff;
}

.c7 svg:first-child {
  margin-right: 8px;
}

.c7 svg:last-child {
  margin-left: 8px;
}

.c1 {
  margin: 0 !important;
  padding: 0 !important;
  font-size: 1rem !important;
  font-weight: normal !important;
  color: #555 !important;
}

.c1 .c9 {
  font-weight: normal;
  color: #555;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .c6::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <h2
    className="c1"
  >
    <button
      aria-expanded={false}
      className="c2 c3 c4 c5 c6 c7"
      id="yoast-collapsible"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c8"
      >
        <span
          className="c9 c10"
        >
          Lorem ipsum dolor sit amet
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="c11 yoast-svg-icon yoast-svg-icon-chevron-down"
        fill="currentColor"
        focusable="false"
        role="img"
        size="24px"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M0,0h24v24H0V0z"
            fill="none"
          />
        </g>
        <g>
          <path
            d="M7.41,8.59L12,13.17l4.59-4.58L18,10l-6,6l-6-6L7.41,8.59z"
          />
        </g>
      </svg>
    </button>
  </h2>
</div>
`;

exports[`Collapsible matches the snapshot by default when the collapsible has an ID 2`] = `
.c11 {
  width: 24px;
  height: 24px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c2 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c3:active {
  color: #000;
  background-color: #f7f7f7;
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c4::-moz-focus-inner {
  border-width: 0;
}

.c4:focus {
  outline: none;
  border-color: #0066cd;
  color: #000;
  background-color: #fff;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c5:hover {
  color: #000;
  background-color: #fff;
  border-color: var(--yoast-color-border--default);
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
  -webkit-transition: var(--yoast-transition-default);
  transition: var(--yoast-transition-default);
}

.c6 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-x: hidden;
  line-height: normal;
}

.c10 {
  display: block;
  line-height: 1.5;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #555;
}

.c0 {
  background-color: #fff;
}

.c7 {
  width: 100%;
  background-color: #fff;
  padding: 16px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border-color: transparent;
  border: none;
  border-radius: 0;
  box-shadow: none;
  font-weight: normal;
}

.c7:focus {
  outline: 1px solid #0066cd;
  outline-offset: -1px;
}

.c7:active {
  box-shadow: none;
  background-color: #fff;
}

.c7 svg:first-child {
  margin-right: 8px;
}

.c7 svg:last-child {
  margin-left: 8px;
}

.c1 {
  margin: 0 !important;
  padding: 0 !important;
  font-size: 1rem !important;
  font-weight: normal !important;
  color: #555 !important;
}

.c1 .c9 {
  font-weight: normal;
  color: #555;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .c6::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <h2
    className="c1"
  >
    <button
      aria-expanded={true}
      className="c2 c3 c4 c5 c6 c7"
      id="yoast-collapsible"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c8"
      >
        <span
          className="c9 c10"
        >
          Lorem ipsum dolor sit amet
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="c11 yoast-svg-icon yoast-svg-icon-chevron-up"
        fill="currentColor"
        focusable="false"
        role="img"
        size="24px"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M0,0h24v24H0V0z"
            fill="none"
          />
        </g>
        <g>
          <path
            d="M12,8l-6,6l1.41,1.41L12,10.83l4.59,4.58L18,14L12,8z"
          />
        </g>
      </svg>
    </button>
  </h2>
  <h4>
    Vivamus rutrum velit ut nunc dignissim vulputate.
  </h4>
  <p>
    In a purus quis leo dictum ultrices. Aenean commodo erat at pellentesque placerat.
  </p>
  <h4>
    Ut id ex efficitur risus suscipit fermentum.
  </h4>
  <p>
    Proin sed dolor neque. Vestibulum id leo ut ante luctus interdum sed ut sem.
  </p>
</div>
`;

exports[`Collapsible matches the snapshot when it is closed 1`] = `
.c11 {
  width: 24px;
  height: 24px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c2 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c3:active {
  color: #000;
  background-color: #f7f7f7;
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c4::-moz-focus-inner {
  border-width: 0;
}

.c4:focus {
  outline: none;
  border-color: #0066cd;
  color: #000;
  background-color: #fff;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c5:hover {
  color: #000;
  background-color: #fff;
  border-color: var(--yoast-color-border--default);
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
  -webkit-transition: var(--yoast-transition-default);
  transition: var(--yoast-transition-default);
}

.c6 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-x: hidden;
  line-height: normal;
}

.c10 {
  display: block;
  line-height: 1.5;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #555;
}

.c0 {
  background-color: #fff;
}

.c7 {
  width: 100%;
  background-color: #fff;
  padding: 16px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border-color: transparent;
  border: none;
  border-radius: 0;
  box-shadow: none;
  font-weight: normal;
}

.c7:focus {
  outline: 1px solid #0066cd;
  outline-offset: -1px;
}

.c7:active {
  box-shadow: none;
  background-color: #fff;
}

.c7 svg:first-child {
  margin-right: 8px;
}

.c7 svg:last-child {
  margin-left: 8px;
}

.c1 {
  margin: 0 !important;
  padding: 0 !important;
  font-size: 1rem !important;
  font-weight: normal !important;
  color: #555 !important;
}

.c1 .c9 {
  font-weight: normal;
  color: #555;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .c6::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <h2
    className="c1"
  >
    <button
      aria-expanded={false}
      className="c2 c3 c4 c5 c6 c7"
      id={null}
      onClick={[Function]}
      type="button"
    >
      <span
        className="c8"
      >
        <span
          className="c9 c10"
        >
          Lorem ipsum dolor sit amet
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="c11 yoast-svg-icon yoast-svg-icon-chevron-down"
        fill="currentColor"
        focusable="false"
        role="img"
        size="24px"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M0,0h24v24H0V0z"
            fill="none"
          />
        </g>
        <g>
          <path
            d="M7.41,8.59L12,13.17l4.59-4.58L18,10l-6,6l-6-6L7.41,8.59z"
          />
        </g>
      </svg>
    </button>
  </h2>
</div>
`;

exports[`Collapsible matches the snapshot when it is closed 2`] = `
.c11 {
  width: 24px;
  height: 24px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c2 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c3:active {
  color: #000;
  background-color: #f7f7f7;
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c4::-moz-focus-inner {
  border-width: 0;
}

.c4:focus {
  outline: none;
  border-color: #0066cd;
  color: #000;
  background-color: #fff;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c5:hover {
  color: #000;
  background-color: #fff;
  border-color: var(--yoast-color-border--default);
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
  -webkit-transition: var(--yoast-transition-default);
  transition: var(--yoast-transition-default);
}

.c6 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-x: hidden;
  line-height: normal;
}

.c10 {
  display: block;
  line-height: 1.5;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #555;
}

.c0 {
  background-color: #fff;
}

.c7 {
  width: 100%;
  background-color: #fff;
  padding: 16px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border-color: transparent;
  border: none;
  border-radius: 0;
  box-shadow: none;
  font-weight: normal;
}

.c7:focus {
  outline: 1px solid #0066cd;
  outline-offset: -1px;
}

.c7:active {
  box-shadow: none;
  background-color: #fff;
}

.c7 svg:first-child {
  margin-right: 8px;
}

.c7 svg:last-child {
  margin-left: 8px;
}

.c1 {
  margin: 0 !important;
  padding: 0 !important;
  font-size: 1rem !important;
  font-weight: normal !important;
  color: #555 !important;
}

.c1 .c9 {
  font-weight: normal;
  color: #555;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .c6::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <h2
    className="c1"
  >
    <button
      aria-expanded={true}
      className="c2 c3 c4 c5 c6 c7"
      id={null}
      onClick={[Function]}
      type="button"
    >
      <span
        className="c8"
      >
        <span
          className="c9 c10"
        >
          Lorem ipsum dolor sit amet
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="c11 yoast-svg-icon yoast-svg-icon-chevron-up"
        fill="currentColor"
        focusable="false"
        role="img"
        size="24px"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M0,0h24v24H0V0z"
            fill="none"
          />
        </g>
        <g>
          <path
            d="M12,8l-6,6l1.41,1.41L12,10.83l4.59,4.58L18,14L12,8z"
          />
        </g>
      </svg>
    </button>
  </h2>
  <h4>
    Vivamus rutrum velit ut nunc dignissim vulputate.
  </h4>
  <p>
    In a purus quis leo dictum ultrices. Aenean commodo erat at pellentesque placerat.
  </p>
  <h4>
    Ut id ex efficitur risus suscipit fermentum.
  </h4>
  <p>
    Proin sed dolor neque. Vestibulum id leo ut ante luctus interdum sed ut sem.
  </p>
</div>
`;

exports[`Collapsible matches the snapshot when it is open 1`] = `
.c11 {
  width: 24px;
  height: 24px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c2 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c3:active {
  color: #000;
  background-color: #f7f7f7;
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c4::-moz-focus-inner {
  border-width: 0;
}

.c4:focus {
  outline: none;
  border-color: #0066cd;
  color: #000;
  background-color: #fff;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c5:hover {
  color: #000;
  background-color: #fff;
  border-color: var(--yoast-color-border--default);
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
  -webkit-transition: var(--yoast-transition-default);
  transition: var(--yoast-transition-default);
}

.c6 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-x: hidden;
  line-height: normal;
}

.c10 {
  display: block;
  line-height: 1.5;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #555;
}

.c0 {
  background-color: #fff;
}

.c7 {
  width: 100%;
  background-color: #fff;
  padding: 16px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border-color: transparent;
  border: none;
  border-radius: 0;
  box-shadow: none;
  font-weight: normal;
}

.c7:focus {
  outline: 1px solid #0066cd;
  outline-offset: -1px;
}

.c7:active {
  box-shadow: none;
  background-color: #fff;
}

.c7 svg:first-child {
  margin-right: 8px;
}

.c7 svg:last-child {
  margin-left: 8px;
}

.c1 {
  margin: 0 !important;
  padding: 0 !important;
  font-size: 1rem !important;
  font-weight: normal !important;
  color: #555 !important;
}

.c1 .c9 {
  font-weight: normal;
  color: #555;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .c6::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <h2
    className="c1"
  >
    <button
      aria-expanded={true}
      className="c2 c3 c4 c5 c6 c7"
      id={null}
      onClick={[Function]}
      type="button"
    >
      <span
        className="c8"
      >
        <span
          className="c9 c10"
        >
          Lorem ipsum dolor sit amet
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="c11 yoast-svg-icon yoast-svg-icon-chevron-up"
        fill="currentColor"
        focusable="false"
        role="img"
        size="24px"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M0,0h24v24H0V0z"
            fill="none"
          />
        </g>
        <g>
          <path
            d="M12,8l-6,6l1.41,1.41L12,10.83l4.59,4.58L18,14L12,8z"
          />
        </g>
      </svg>
    </button>
  </h2>
  <h4>
    Vivamus rutrum velit ut nunc dignissim vulputate.
  </h4>
  <p>
    In a purus quis leo dictum ultrices. Aenean commodo erat at pellentesque placerat.
  </p>
  <h4>
    Ut id ex efficitur risus suscipit fermentum.
  </h4>
  <p>
    Proin sed dolor neque. Vestibulum id leo ut ante luctus interdum sed ut sem.
  </p>
</div>
`;

exports[`Collapsible matches the snapshot when it is open 2`] = `
.c11 {
  width: 24px;
  height: 24px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c2 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c3:active {
  color: #000;
  background-color: #f7f7f7;
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c4::-moz-focus-inner {
  border-width: 0;
}

.c4:focus {
  outline: none;
  border-color: #0066cd;
  color: #000;
  background-color: #fff;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c5:hover {
  color: #000;
  background-color: #fff;
  border-color: var(--yoast-color-border--default);
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
  -webkit-transition: var(--yoast-transition-default);
  transition: var(--yoast-transition-default);
}

.c6 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-x: hidden;
  line-height: normal;
}

.c10 {
  display: block;
  line-height: 1.5;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #555;
}

.c0 {
  background-color: #fff;
}

.c7 {
  width: 100%;
  background-color: #fff;
  padding: 16px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border-color: transparent;
  border: none;
  border-radius: 0;
  box-shadow: none;
  font-weight: normal;
}

.c7:focus {
  outline: 1px solid #0066cd;
  outline-offset: -1px;
}

.c7:active {
  box-shadow: none;
  background-color: #fff;
}

.c7 svg:first-child {
  margin-right: 8px;
}

.c7 svg:last-child {
  margin-left: 8px;
}

.c1 {
  margin: 0 !important;
  padding: 0 !important;
  font-size: 1rem !important;
  font-weight: normal !important;
  color: #555 !important;
}

.c1 .c9 {
  font-weight: normal;
  color: #555;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .c6::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <h2
    className="c1"
  >
    <button
      aria-expanded={false}
      className="c2 c3 c4 c5 c6 c7"
      id={null}
      onClick={[Function]}
      type="button"
    >
      <span
        className="c8"
      >
        <span
          className="c9 c10"
        >
          Lorem ipsum dolor sit amet
        </span>
      </span>
      <svg
        aria-hidden={true}
        className="c11 yoast-svg-icon yoast-svg-icon-chevron-down"
        fill="currentColor"
        focusable="false"
        role="img"
        size="24px"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="M0,0h24v24H0V0z"
            fill="none"
          />
        </g>
        <g>
          <path
            d="M7.41,8.59L12,13.17l4.59-4.58L18,10l-6,6l-6-6L7.41,8.59z"
          />
        </g>
      </svg>
    </button>
  </h2>
</div>
`;

exports[`CollapsibleStateless matches the snapshot by default 1`] = `
.c2 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c3:active {
  color: #000;
  background-color: #f7f7f7;
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c4::-moz-focus-inner {
  border-width: 0;
}

.c4:focus {
  outline: none;
  border-color: #0066cd;
  color: #000;
  background-color: #fff;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c5:hover {
  color: #000;
  background-color: #fff;
  border-color: var(--yoast-color-border--default);
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
  -webkit-transition: var(--yoast-transition-default);
  transition: var(--yoast-transition-default);
}

.c6 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-x: hidden;
  line-height: normal;
}

.c10 {
  display: block;
  line-height: 1.5;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #555;
}

.c0 {
  background-color: #fff;
}

.c7 {
  width: 100%;
  background-color: #fff;
  padding: 16px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border-color: transparent;
  border: none;
  border-radius: 0;
  box-shadow: none;
  font-weight: normal;
}

.c7:focus {
  outline: 1px solid #0066cd;
  outline-offset: -1px;
}

.c7:active {
  box-shadow: none;
  background-color: #fff;
}

.c7 svg:first-child {
  margin-right: 8px;
}

.c7 svg:last-child {
  margin-left: 8px;
}

.c1 {
  margin: 0 !important;
  padding: 0 !important;
  font-size: 1rem !important;
  font-weight: normal !important;
  color: !important;
}

.c1 .c9 {
  font-weight: normal;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .c6::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <h2
    className="c1"
  >
    <button
      aria-expanded={true}
      className="c2 c3 c4 c5 c6 c7"
      id={null}
      onClick={[Function]}
      type="button"
    >
      <span
        className="c8"
      >
        <span
          className="c9 c10"
        >
          Lorem ipsum dolor sit amet
        </span>
      </span>
    </button>
  </h2>
  <h4>
    Vivamus rutrum velit ut nunc dignissim vulputate.
  </h4>
  <p>
    In a purus quis leo dictum ultrices. Aenean commodo erat at pellentesque placerat.
  </p>
  <h4>
    Ut id ex efficitur risus suscipit fermentum.
  </h4>
  <p>
    Proin sed dolor neque. Vestibulum id leo ut ante luctus interdum sed ut sem.
  </p>
</div>
`;

exports[`CollapsibleStateless matches the snapshot when it is opened and closed 1`] = `
.c2 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c3:active {
  color: #000;
  background-color: #f7f7f7;
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c4::-moz-focus-inner {
  border-width: 0;
}

.c4:focus {
  outline: none;
  border-color: #0066cd;
  color: #000;
  background-color: #fff;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c5:hover {
  color: #000;
  background-color: #fff;
  border-color: var(--yoast-color-border--default);
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
  -webkit-transition: var(--yoast-transition-default);
  transition: var(--yoast-transition-default);
}

.c6 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-x: hidden;
  line-height: normal;
}

.c10 {
  display: block;
  line-height: 1.5;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #555;
}

.c0 {
  background-color: #fff;
}

.c7 {
  width: 100%;
  background-color: #fff;
  padding: 16px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border-color: transparent;
  border: none;
  border-radius: 0;
  box-shadow: none;
  font-weight: normal;
}

.c7:focus {
  outline: 1px solid #0066cd;
  outline-offset: -1px;
}

.c7:active {
  box-shadow: none;
  background-color: #fff;
}

.c7 svg:first-child {
  margin-right: 8px;
}

.c7 svg:last-child {
  margin-left: 8px;
}

.c1 {
  margin: 0 !important;
  padding: 0 !important;
  font-size: 1rem !important;
  font-weight: normal !important;
  color: !important;
}

.c1 .c9 {
  font-weight: normal;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .c6::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <h2
    className="c1"
  >
    <button
      aria-expanded={true}
      className="c2 c3 c4 c5 c6 c7"
      id={null}
      onClick={[Function]}
      type="button"
    >
      <span
        className="c8"
      >
        <span
          className="c9 c10"
        >
          Lorem ipsum dolor sit amet
        </span>
      </span>
    </button>
  </h2>
  <h4>
    Vivamus rutrum velit ut nunc dignissim vulputate.
  </h4>
  <p>
    In a purus quis leo dictum ultrices. Aenean commodo erat at pellentesque placerat.
  </p>
  <h4>
    Ut id ex efficitur risus suscipit fermentum.
  </h4>
  <p>
    Proin sed dolor neque. Vestibulum id leo ut ante luctus interdum sed ut sem.
  </p>
</div>
`;

exports[`CollapsibleStateless matches the snapshot when it is opened and closed 2`] = `
.c2 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c3:active {
  color: #000;
  background-color: #f7f7f7;
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c4::-moz-focus-inner {
  border-width: 0;
}

.c4:focus {
  outline: none;
  border-color: #0066cd;
  color: #000;
  background-color: #fff;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c5:hover {
  color: #000;
  background-color: #fff;
  border-color: var(--yoast-color-border--default);
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
  -webkit-transition: var(--yoast-transition-default);
  transition: var(--yoast-transition-default);
}

.c6 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c8 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-x: hidden;
  line-height: normal;
}

.c10 {
  display: block;
  line-height: 1.5;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #555;
}

.c0 {
  background-color: #fff;
}

.c7 {
  width: 100%;
  background-color: #fff;
  padding: 16px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border-color: transparent;
  border: none;
  border-radius: 0;
  box-shadow: none;
  font-weight: normal;
}

.c7:focus {
  outline: 1px solid #0066cd;
  outline-offset: -1px;
}

.c7:active {
  box-shadow: none;
  background-color: #fff;
}

.c7 svg:first-child {
  margin-right: 8px;
}

.c7 svg:last-child {
  margin-left: 8px;
}

.c1 {
  margin: 0 !important;
  padding: 0 !important;
  font-size: 1rem !important;
  font-weight: normal !important;
  color: !important;
}

.c1 .c9 {
  font-weight: normal;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .c6::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <h2
    className="c1"
  >
    <button
      aria-expanded={true}
      className="c2 c3 c4 c5 c6 c7"
      id={null}
      onClick={[Function]}
      type="button"
    >
      <span
        className="c8"
      >
        <span
          className="c9 c10"
        >
          Lorem ipsum dolor sit amet
        </span>
      </span>
    </button>
  </h2>
  <h4>
    Vivamus rutrum velit ut nunc dignissim vulputate.
  </h4>
  <p>
    In a purus quis leo dictum ultrices. Aenean commodo erat at pellentesque placerat.
  </p>
  <h4>
    Ut id ex efficitur risus suscipit fermentum.
  </h4>
  <p>
    Proin sed dolor neque. Vestibulum id leo ut ante luctus interdum sed ut sem.
  </p>
</div>
`;

exports[`CollapsibleStateless matches the snapshot with prefix seo icon and screen reader text 1`] = `
.c8 {
  width: 16px;
  height: 16px;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c2 {
  color: #555;
  border-color: #ccc;
  background: #f7f7f7;
  box-shadow: 0 1px 0 rgba( 204,204,204,1 );
}

.c3:active {
  color: #000;
  background-color: #f7f7f7;
  box-shadow: inset 0 2px 5px -3px rgba( 0,0,0,0.5 );
}

.c4::-moz-focus-inner {
  border-width: 0;
}

.c4:focus {
  outline: none;
  border-color: #0066cd;
  color: #000;
  background-color: #fff;
  box-shadow: 0 0 3px rgba( 8,74,103,0.8 );
}

.c5:hover {
  color: #000;
  background-color: #fff;
  border-color: var(--yoast-color-border--default);
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border-width: 1px;
  border-style: solid;
  margin: 0;
  padding: 4px 10px;
  border-radius: 3px;
  cursor: pointer;
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  font-weight: inherit;
  text-align: left;
  overflow: visible;
  min-height: 32px;
  -webkit-transition: var(--yoast-transition-default);
  transition: var(--yoast-transition-default);
}

.c6 svg {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-x: hidden;
  line-height: normal;
}

.c11 {
  display: block;
  line-height: 1.5;
  text-overflow: ellipsis;
  overflow: hidden;
  color: #555;
}

.c0 {
  background-color: #fff;
}

.c7 {
  width: 100%;
  background-color: #fff;
  padding: 16px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border-color: transparent;
  border: none;
  border-radius: 0;
  box-shadow: none;
  font-weight: normal;
}

.c7:focus {
  outline: 1px solid #0066cd;
  outline-offset: -1px;
}

.c7:active {
  box-shadow: none;
  background-color: #fff;
}

.c7 svg:first-child {
  margin-right: 8px;
}

.c7 svg:last-child {
  margin-left: 8px;
}

.c1 {
  margin: 0 !important;
  padding: 0 !important;
  font-size: 1rem !important;
  font-weight: normal !important;
  color: !important;
}

.c1 .c10 {
  font-weight: normal;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .c6::after {
    display: inline-block;
    content: "";
    min-height: 22px;
  }
}

<div
  className="c0"
>
  <h2
    className="c1"
  >
    <button
      aria-expanded={true}
      className="c2 c3 c4 c5 c6 c7"
      id={null}
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-hidden={true}
        className="c8 yoast-svg-icon yoast-svg-icon-circle"
        fill="red"
        focusable="false"
        role="img"
        size="16px"
        viewBox="0 0 1792 1792"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1664 896q0 209-103 385.5t-279.5 279.5-385.5 103-385.5-103-279.5-279.5-103-385.5 103-385.5 279.5-279.5 385.5-103 385.5 103 279.5 279.5 103 385.5z"
        />
      </svg>
      <span
        className="c9"
      >
        <span
          className="c10 c11"
        >
          Lorem ipsum dolor sit amet
          <span
            className="screen-reader-text"
            style={
              Object {
                "clip": "rect(1px, 1px, 1px, 1px)",
                "height": "1px",
                "overflow": "hidden",
                "position": "absolute",
                "width": "1px",
              }
            }
          >
             bad SEO score
          </span>
        </span>
      </span>
    </button>
  </h2>
  <h4>
    Vivamus rutrum velit ut nunc dignissim vulputate.
  </h4>
  <p>
    In a purus quis leo dictum ultrices. Aenean commodo erat at pellentesque placerat.
  </p>
  <h4>
    Ut id ex efficitur risus suscipit fermentum.
  </h4>
  <p>
    Proin sed dolor neque. Vestibulum id leo ut ante luctus interdum sed ut sem.
  </p>
</div>
`;
